# GenreSensei

./: .gitignore  Makefile  README.md  REPORT.md  config.yaml  pyproject.toml  requirements.txt
experiments/: README.md
genre_classifier/: __init__.py  cli.py  config.py  data.py  interpretability.py  models.py  predict.py  reporting.py  train.py  utils.py
scripts/: reproduce.sh  streamlit_app.py
tests/: test_config.py  test_features.py
